fixed: Log Injection CWE-117