@@ -27,7 +27,6 @@ import org.eclipse.tractusx.traceability.qualitynotification.infrastructure.edc.
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class SecurityUtils {
     private static final List<String> UNWANTED_STRINGS = Arrays.asList("\r\n", "\r", "\n");
@@ -41,9 +40,8 @@ public class SecurityUtils {
     public static List<String> sanitize(List<String> unSanitizedList) {
         if (!unSanitizedList.isEmpty()) {
             return unSanitizedList.stream()
-                    .filter(Objects::nonNull)
                     .map(SecurityUtils::sanitize)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return null;
     }
